# quantum-kernel-gpr-pennylane

./: .gitignore  LICENSE  README.md  RESULTS.md  STUDIES.md  analysis.ipynb  experiments_scratch.parquet  pyproject.toml  quantum_kernel_gpr_pennylane.ipynb  quantum_kernel_gpr_pennylane_main.ipynb  quantum_kernel_gpr_pennylane_main_multiple.py  requirements.txt  run.py  study_samples.py  study_shots.py  sweep.py
experiments/: scratch.parquet
src/: __init__.py  config.py  data.py  experiment.py  feature_maps.py  logger.py  model.py  plotting.py  quantum_kernel.py  training.py
